--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <fieldset class="next-steps">
                             <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
                             <div class="poll">
-                                <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
+                                <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Mettre le mode nuit</label><span class="nb_votes"></span></div>
                                 <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Référencer d'autres projets</label><span class="nb_votes"></span></div>
                                 <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Identifier les visites/clics/IP d'aujourd'hui</label><span class="nb_votes"></span></div>  
                                 <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
