FINALLY WORKING DEMO

--- a/projets-automatisations/codes/nuit.html
+++ b/projets-automatisations/codes/nuit.html
@@ -9,6 +9,7 @@
 	 <!-- STYLES PAR DEFAUT -->
 	<style type="text/css">
 		* {font-family: arial;text-align: center;}
+		body{background-color: white}
 		#ignore{background-color: black; color: white;	border-width: 1px;	border-color: #ff8c8c;	border-style: outset;}
 	</style>
 
