--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                     <a class="btn btn-secondary display-4" >VBA</a>
                     <a class="btn btn-secondary display-4" >SQL</a>
                     <a class="btn btn-secondary display-4" >EXCEL</a>
+                    <a class="btn btn-secondary display-4" >NODE JS</a>
                     <a class="btn btn-secondary display-4" >GOOGLE SCRIPT</a>
                     <a class="btn btn-secondary display-4" >TABLEAU SOFTWARE</a>
                     <a class="btn btn-secondary display-4" >MS ACCESS</a>
