--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                     <a class="btn btn-secondary display-4" >EXCEL</a>
                     <a class="btn btn-secondary display-4" >NODE JS</a>
                     <a class="btn btn-secondary display-4" >GOOGLE SCRIPT</a>
+                    <a class="btn btn-secondary display-4" >GOOGLE DATA STUDIO</a>
                     <a class="btn btn-secondary display-4" >TABLEAU SOFTWARE</a>
                     <a class="btn btn-secondary display-4" >MS ACCESS</a>
                     <a class="btn btn-secondary display-4" >HTML/CSS/JavaScript</a>
